css/main.css
html {
  box-sizing: border-box;
}

  *, *::before, *::after {
  box-sizing: inherit;
  font-family: sans-serif;
  line-height:normal;
}

.cards {
  margin: 0;
  padding: 0;
  list-style-type: none;
  text-align: center;
}

.cards li {
  display: inline-block;
  margin: 0 .5em 1em;
  max-width: 20em;
  padding: 1em;
  background-color: #fff;
  border: 3px solid #e2e2e2;
  border-radius: 10px;
  text-align: left;
}

.cards img {
  display: block;
  margin: 0 auto 1rem;
}

.cards strong {
  display: block;
  margin-bottom: 1rem;
  font-size: 1.125rem;
}

.cards dl {
  margin-bottom: 1rem;
}

.cards dt {
  display: inline-block;
  width: 6em;
  font-style: italic;
}

.cards dd {
  display: inline-block;
  margin: 0;
  min-width: 9em;
}

.cards div {
  text-align: center;
}

.cards a {
  display: inline-block;
  padding: .5em .75em;
  background-color: #ccc;
  border-radius: 4px;
  color: #000;
  text-decoration: none;
}

.cards a:hover {
  background-color: #333;
  color: #fff;
}

